--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.7.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
