--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.7.0",
+    "moment": "^2.23.0",
     "react": "^16.6.3",
+    "react-csv": "^1.0.19",
     "react-dom": "^16.6.3",
     "react-modal": "^3.7.1",
     "react-scripts": "2.1.1"
